# TarkovMonitor

./: .gitignore  Directory.Build.props  LICENSE.rtf  README.md  TarkovMonitor.sln  UVB76-changes.md  claude.md  client-dev.md
Scripts/: Build-Installer.ps1  Install-TarkovMonitorService.ps1  Uninstall-TarkovMonitorService.ps1
TarkovMonitor.Core/: CoreJsonContext.cs  GameWatcher.cs  GetProcessFilename.cs  LogLine.cs  LogMessageTypes.cs  LogMonitor.cs  RegistrySettings.cs  TarkovMonitor.Core.csproj  TarkovTrackerClient.cs
TarkovMonitor.Installer/: ConfigureService.wxs  Dashboard.wxs  Dashboard_harvest.wxs  Features.wxs  Package.wxs  Service.wxs  Service_harvest.wxs  TarkovMonitor.Installer.wixproj  Tools.wxs  Tools_harvest.wxs  UI.wxs  UI_harvest.wxs
TarkovMonitor.Service/: Program.cs  TarkovMonitor.Service.csproj  appsettings.json
TarkovMonitor.Service.Contracts/: TarkovMonitor.Service.Contracts.csproj
TarkovMonitor.Service.TestServer/: Program.cs  TarkovMonitor.Service.TestServer.csproj  TestGameEventService.cs
TarkovMonitor.StreamerDashboard/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  (+3 more)
TarkovMonitor.TUI/: generate_proto.py  pyproject.toml  requirements.txt  run.bat  run.sh
TarkovMonitor.TUI/tarkovmonitor_tui/: app.py  cooldown.py  game_events_pb2.py  game_events_pb2_grpc.py  grpc_client.py  manager_api.py  screenshots.py  socket_client.py  sounds.py  tarkov_dev.py  tarkov_tracker.py
TarkovMonitor.TUI/tests/: test_cooldown.py  test_manager_api.py  test_screenshots.py  test_socket_client.py  test_tarkov_dev.py  test_tarkov_tracker.py
(+75 files in other folders)
