[project]
name = "tarkovmonitor-tui"
version = "0.1.0"
description = "Python TUI client for TarkovMonitor.Service — cross-language gRPC showcase"
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0.0",
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "httpx>=0.28.0",
    "watchfiles>=1.0.0",
]

[project.scripts]
tarkovmonitor-tui = "tarkovmonitor_tui.app:main"
