[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tarkovmonitor-tui"
version = "0.1.0"
description = "Python TUI client for TarkovMonitor.Service — cross-language gRPC showcase"
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0.0",
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "httpx>=0.28.0",
    "watchfiles>=1.0.0",
    "websockets>=12.0,<14",
]

[tool.setuptools.packages]
find = { include = ["tarkovmonitor_tui"] }

[project.scripts]
tarkovmonitor-tui = "tarkovmonitor_tui.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
